Fix for overflowing h1 extension
overflow:hidden.

--- a/HighSchoolHacking/Content/positioning.scss
+++ b/HighSchoolHacking/Content/positioning.scss
@@ -38,6 +38,7 @@ article:after {
 
 section:first-of-type h1 {
     text-align: center;
+    overflow: hidden;
 }
 
 section {
